# adftools

./: CMakeLists.txt  Makefile  README.md  adfmakedir  misc.h
adflib/: CMakeLists.txt  Makefile
